tests/paczka1/small_fuzzy/73859900.err
Error in line 7: nyX A311 57,1
Error in line 8: nyX A127 43,4
Error in line 5: AKfeIXxS A311 49,3
